# rusta

./: .gitignore  Cargo.toml  README.md  apm.ndjson  docker-compose.yml  filebeat.yml
ravix/: Cargo.toml
ravix-apm/: Cargo.toml
ravix-apm/src/: config.rs  manager.rs  types.rs  writer.rs
ravix-di/: Cargo.toml
ravix-di-macros/: Cargo.toml
ravix-di-macros/src/: controller.rs  injectable.rs  lib.rs
ravix-di/src/: container.rs  error.rs  handler.rs  lib.rs
ravix-docs/: README.md  astro.config.mjs  package.json  tsconfig.json
ravix-docs/.astro/astro/: content.d.ts
ravix-docs/src/styles/: starlight.css
ravix-example/: .env.example  Blog API.postman_collection.json  Cargo.toml  Dockerfile  README.md
ravix-example/benches/: blog_benchmarks.rs
ravix-example/docs/: README.md
ravix-example/src/: config.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs
ravix-example/src/controllers/: auth_controller.rs  comment_controller.rs  mod.rs  post_controller.rs  user_controller.rs
ravix-example/src/models/: comment.rs
ravix-example/src/repositories/: comment_repository.rs  mod.rs  post_repository.rs  user_repository.rs
ravix-example/src/services/: auth_service.rs  comment_service.rs  mod.rs  post_service.rs  user_service.rs
ravix-example/tests/integration/: auth_tests.rs  comment_tests.rs  mod.rs  post_tests.rs  test_harness.rs
ravix-logger/: Cargo.toml
ravix-logger/src/: manager.rs
ravix-macros/: Cargo.toml
ravix-macros/src/: controller.rs  injectable.rs  lib.rs  routes.rs
ravix/src/: app.rs  container.rs  error.rs  handler.rs  lib.rs  request.rs  response.rs  router.rs
ravix/src/middleware/: auth_guard.rs  chain.rs  mod.rs
rusta/: Cargo.toml
rusta-apm/: Cargo.toml
rusta-apm/src/: adapter.rs  config.rs  context.rs  lib.rs  manager.rs  middleware.rs  span.rs  transaction.rs  types.rs  writer.rs
rusta-di/: Cargo.toml
rusta-di-macros/: Cargo.toml
rusta-di-macros/src/: controller.rs  injectable.rs  lib.rs  routes.rs
rusta-di/src/: container.rs  lib.rs
rusta-docs/: README.md  astro.config.mjs  package-lock.json  package.json
rusta-docs/.astro/: settings.json
rusta-docs/src/styles/: starlight.css
rusta-example/: Blog API.postman_collection.json  Cargo.toml  Dockerfile
rusta-example/benches/: blog_benchmarks.rs
rusta-example/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  middleware.rs
rusta-example/src/controllers/: auth_controller.rs  comment_controller.rs  mod.rs  post_controller.rs
rusta-example/src/models/: comment.rs  post.rs  user.rs
rusta-example/src/repositories/: comment_repository.rs  mod.rs  post_repository.rs  user_repository.rs
rusta-example/src/services/: auth_service.rs  comment_service.rs  mod.rs  post_service.rs
rusta-logger/: Cargo.toml
rusta-logger/src/: adapter.rs  config.rs  context.rs  lib.rs  manager.rs  middleware.rs  types.rs  writer.rs
rusta-macros/src/: injectable.rs  lib.rs
rusta/src/: app.rs  container.rs  error.rs  handler.rs  lib.rs  request.rs  response.rs  router.rs
rusta/src/middleware/: auth_guard.rs  chain.rs  cors.rs
