[package]
name = "ravix-apm"
version = "0.1.0"
edition = "2021"

[features]
default = ["axum-middleware"]
axum-middleware = ["dep:axum"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", optional = true }
log = "0.4"
futures = "0.3"
ravix-di = { path = "../ravix-di" }