[package]
name = "ravix-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ravix-example"
path = "src/main.rs"

[dependencies]
ravix = { path = "../ravix" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.7" }
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
