[package]
name = "ravix-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ravix-example"
path = "src/main.rs"

[lib]
name = "ravix_example"
path = "src/lib.rs"

[dependencies]
ravix = { path = "../ravix" }
ravix-di = { path = "../ravix-di" }
ravix-apm = { path = "../ravix-apm" }
ravix-logger = { path = "../ravix-logger" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7" }
async-trait = "0.1"
 mongodb = "3"
jsonwebtoken = "9"
argon2 = { version = "0.5" }
rand = "0.8"
bson = { version = "2", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3.32"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mongo"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.21"
uuid = { version = "1", features = ["v4"] }

[[bench]]
name = "blog_benchmarks"
harness = false
