[package]
name = "ravix"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
thiserror = "1"
ravix-di = { path = "../ravix-di" }
ravix-di-macros = { path = "../ravix-di-macros" }
